[package]
name = "panfix"
version = "0.4.0"
authors = ["Justin Pombrio <zallambo@gmail.com>"]
edition = "2021"
description = "Panfix parsing: linear time parsing of multifix operators."
license = "MIT"
repository = "https://github.com/justinpombrio/panfix"
# TODO: documentation=, once on crates.io
# TODO: homepage=, once blog posted

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
thiserror = "1"

[features]
debug_mode = []
