[package]
name = "panfix"
version = "0.5.1"
authors = ["Justin Pombrio <zallambo@gmail.com>"]
edition = "2021"
description = "Panfix parsing: linear time parsing of multifix operators."
license = "MIT"
repository = "https://github.com/justinpombrio/panfix"
documentation = "https://docs.rs/panfix/0.5.1/panfix/"
# TODO: homepage=, once blog posted

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
thiserror = "1"
colored = "2.1"

[features]
debug_mode = []
